--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
 /* ------------------------------------------------------------------
   general base styles / reset
 ------------------------------------------------------------------ */
+:root {
+  --white: #f4f4f4;
+  --green: rgba(9,83,65, 0.6);
+  --dark-green: rgba(3,43,33,.6);
+}
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 *,
 *:before,
@@ -13,8 +19,15 @@ body {
   margin: 0;
   font-family: sans-serif;
   font-size: 100%;
-  color: #454545;
+  color: var(--white);
   padding: 1em;
+  background: linear-gradient(
+    rgba(20,56,41,.5),
+    rgba(14,43,58,.5))
+    ,
+    url(imgs/evgeni-evgeniev-454219-unsplash_small.jpg) no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Vollkorn', serif;
 }
 ul {
   list-style-type: none;
@@ -27,14 +40,22 @@ ul {
 .app {
   max-width: 600px;
   margin: 0 auto;
+  padding: 1em;
 }
 .app__title {
   text-align: center;
+  margin-bottom: 1em;
+  font-weight: 400;
+  font-size: 4em;
+  text-shadow: 0 0 20px rgba(0,0,0,.8);
 }
 
 /* ------------------------------------------------------------------
   form styles
 ------------------------------------------------------------------ */
+.todo-form-wrapper {
+  margin-bottom: 3.5em;
+}
 .todo-form {
   display: flex;
 }
@@ -43,29 +64,34 @@ ul {
   outline: 0;
   border: 1px solid rgba(0,0,0, 0.1);
   border-right: 0;
-  padding: .8em .5em;
+  padding: .8em .5em .6em .5em;
   border-radius: 3px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   font-size: 1em;
+  font-family: 'Vollkorn', serif;
+  color: var(--dark-green);
 }
 .todo-form__button {
-  background-color: #454545;
+  background-color: var(--dark-green);
   color: #fff;
   outline: 0;
   border: 0;
   border-radius: 3px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  border: 1px solid rgba(255,255,255,.2);
   padding-left: 2em;
   padding-right: 2em;
   text-transform: uppercase;
   font-weight: 100;
   transition: background-color .2s ease-out;
+  font-family: 'Vollkorn', serif;
+  letter-spacing: 2px;
 }
 .todo-form__button:hover {
   cursor: pointer;
-  background-color: #555;
+  background-color: var(--green);
 }
 
 /* ------------------------------------------------------------------
@@ -75,16 +101,35 @@ ul {
 }
 .todo-list__item {
   border: 1px solid rgba(0,0,0,.1);
-  padding: .8em 1em;
-  margin-bottom: .8em;
+  padding: .9em .8em .8em .8em;
+  margin-bottom: 1.2em;
   transition: background-color .2s ease-out;
   border-radius: 3px;
   display:flex;
   justify-content: space-between;
+  border: 1px solid rgba(255,255,255,.2);
+  background: var(--dark-green);
+  letter-spacing: 1px;
 }
 .todo-list__item:last-child {
   margin-bottom: 0;
 }
 .todo-list__item:hover {
-  background-color: #eee;
+  background-color: transparent;
+}
+.todo-list__item i {
+  margin-top: 1px;
+}
+
+
+.image-credit {
+  text-align: center;
+  font-size: 0.8em;
+}
+.image-credit a {
+  text-decoration: underline;
+  color: #aaa;
+}
+.image-credit a:hover {
+  color: #fff;
 }
