Clean unused code

--- a/src/styles.css
+++ b/src/styles.css
@@ -121,7 +121,9 @@ ul {
   margin-top: 1px;
 }
 
-
+/* ------------------------------------------------------------------
+  image credit styles
+------------------------------------------------------------------ */
 .image-credit {
   text-align: center;
   font-size: 0.8em;
